[gd_scene load_steps=13 format=3 uid="uid://rbykcmxeje3j"]

[ext_resource type="Script" path="res://objects/character.gd" id="1_1rul0"]
[ext_resource type="Texture2D" uid="uid://bdmfi5kx3thxw" path="res://addons/Tiny Swords/Resources/Sheep/HappySheep_All.png" id="2_47a31"]
[ext_resource type="Script" path="res://components/state_machine.gd" id="3_730mq"]
[ext_resource type="Script" path="res://objects/sheep/states/idle_state.gd" id="4_dgnwt"]
[ext_resource type="Script" path="res://objects/sheep/states/bounce_state.gd" id="5_afrgs"]
[ext_resource type="Script" path="res://objects/sheep/states/follow_state.gd" id="6_f7tav"]

[sub_resource type="Animation" id="Animation_tfqfs"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_3rmwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_1r4bj"]
resource_name = "bounce"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytx7t"]
_data = {
"RESET": SubResource("Animation_3rmwe"),
"bounce": SubResource("Animation_1r4bj"),
"idle": SubResource("Animation_tfqfs")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1c76f"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_lkg5u"]
radius = 33.0606

[node name="Sheep" type="CharacterBody2D"]
script = ExtResource("1_1rul0")
speed = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("2_47a31")
hframes = 8
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytx7t")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_1c76f")
disabled = true

[node name="PartyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PartyArea"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_lkg5u")
debug_color = Color(0.0863806, 0.786058, 0.597185, 0.152941)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_730mq")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_dgnwt")

[node name="BounceState" type="Node" parent="StateMachine"]
script = ExtResource("5_afrgs")

[node name="FollowState" type="Node" parent="StateMachine"]
script = ExtResource("6_f7tav")
